[gd_scene load_steps=31 format=2]

[ext_resource path="res://Character/Bat_bot_blue.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_attack.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_2.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_3.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_4.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_1.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_2.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_3.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_4.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_5.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_6.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attack_die2_4.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attack_die2_2.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attack_die2_3.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attack_die2_1.png" type="Texture" id=16]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=17]
[ext_resource path="res://Graphics/interface/bar_vie/vie_blue.png" type="Texture" id=18]
[ext_resource path="res://Graphics/interface/bar_vie/vie_divine_shield.png" type="Texture" id=19]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie_divine_shield.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "mouv",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "die",
"speed": 14.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "die_2",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 8.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "divine_shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 136, 257 )

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="Animation" id=7]
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "mouv" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bat_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_flap"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bat_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack_check/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bat_spr/attack/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die_2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bat_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("alive_detect:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack_check/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bat_spr/attack/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 14.0

[node name="Bat_bot_blue" type="RigidBody2D" groups=[
"Bat",
"Character_blue",
"Character_sprite",
]]
collision_layer = 4
collision_mask = 110
mode = 2
custom_integrator = true
script = ExtResource( 1 )

[node name="bat_spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die_2"
speed_scale = 0.75
__meta__ = {
"_edit_lock_": true
}

[node name="attack" type="Area2D" parent="bat_spr"]
collision_layer = 0
collision_mask = 1098
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bat_spr/attack"]
position = Vector2( 2, -1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="barre_vie" type="AnimatedSprite" parent="bat_spr"]
position = Vector2( 0, -17 )
frames = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="vie" type="TextureProgress" parent="bat_spr/barre_vie"]
margin_left = -8.0
margin_top = -13.0
margin_right = 11.0
margin_bottom = 19.0
value = 100.0
texture_progress = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="divine_shield" type="AnimatedSprite" parent="bat_spr/barre_vie"]
position = Vector2( -5.98268, -9.0147 )
frames = SubResource( 4 )
animation = "off"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="attack_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1090
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_check"]
position = Vector2( 136, 5 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bat_attack = SubResource( 6 )
anims/Bat_move = SubResource( 7 )
anims/die = SubResource( 8 )
anims/die_2 = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="alive_detect" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="bat_spr/attack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="attack_check" to="." method="_on_attack_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
